# robotics-crash-course

./: .editorconfig  .gitignore  .gitmodules  Acknowledgements.txt  Code TODOs.txt  Makefile  README.md  book.toml
Arduino Code/accel_test/: accel_test.ino
Arduino Code/arrays/: arrays.ino
Arduino Code/obstacle_detection/: obstacle_detection.ino
Arduino Libraries/GY_521/: GY_521.cpp  GY_521.h
Arduino Libraries/HC_SR04/: HC_SR04.cpp
Arduino Libraries/MPU6050/: MPU6050.cpp  MPU6050.h
Arduino Libraries/library_lesson/: library_lesson.cpp  library_lesson.h
Arduino Libraries/motor_control/: motor_control.cpp  motor_control.h
Arduino Libraries/object_detection/: object_detection.cpp  object_detection.h
Indiv Work Templates/: Final Project Outline.docx  PID Controller Breakout Session 1.docx  PID Controller Breakout Session 2.docx  TURN_IN.docx
Indiv Work Templates/Array_Task_1/: Array_Task_1.ino
Indiv Work Templates/Array_Task_2/: Array_Task_2.ino
Indiv Work Templates/Circle_Class/: Circle_Class.ino
Indiv Work Templates/arduino_lesson_1_task/: arduino_lesson_1_task.ino
Indiv Work Templates/card_deck/: card_deck.ino
Indiv Work Templates/syntax_task/: syntax_task.ino
Lecture material/arduino_module/arduino_lesson_1/: arduino_lesson_1.ino
Lecture material/arduino_module/arduino_lesson_3/: arduino_lesson_3.ino
Lecture material/arduino_module/arduino_lib_lesson/: arduino_lib_lesson.ino
Lecture material/arduino_module/syntax_lesson/: syntax_lesson.ino
Manufacturing Files/: Arduino-Motor Controller Spacer.stl  Ball Caser Spacer.stl  Battery Mount.stl  Frame Rev1.dxf  Sensor Mount.stl
Manufacturing Files/3D Prints/: 3mm hex nut key.stl  Accel Top Spacer.stl  ICSP Pin protector - Part 1.stl  Motor Strain Relief.stl  Sensor Cover - Sensor Cover.stl  Sensor Mount.stl  motor bracket.stl
Manufacturing Files/3D Prints/Motor Bracket/: Motor Bracket - Left Motor Mount.stl  Motor Bracket - Right Motor Mount.stl
Manufacturing Files/3D Prints/Pre-Sliced for 30 kits/: ICSP Pin protector x 30.gcode
Manufacturing Files/Hardware CAD Files/: M3-12mm.STEP
Manufacturing Files/Lasercuts/: Encoder Wheel - Encoder Wheel.dxf  Frame Encoders.dxf  Frame Rev2.dxf  Frame Rev3.dxf  Frame Rev4.dxf  Frame Rev5.dxf
Manufacturing Files/Manufacturing Notes/: Manufacturing Notes.txt  Rev1 Notes.txt  Rev2 Notes.txt  Update notes 5-22.txt
Manufacturing Files/Manufacturing Procedure/: Procedure.txt
Manufacturing Files/QC Testing Code/HC_SR04_test/: HC_SR04_test.ino
Manufacturing Files/QC Testing Code/MPU6050_test/: MPU6050_test.ino
Manufacturing Files/QC Testing Code/Optical_interrupt_test/: Optical_interrupt_test.ino
Module material/: Curiculum Notes.txt
Module material/arduino_module/arduino_lesson_1/: arduino_lesson_1.ino
Module material/arduino_module/arduino_lesson_2/: arduino_lesson_2.ino
Module material/arduino_module/arduino_lib_lesson/: arduino_lib_lesson.ino
Module material/arduino_module/syntax_lesson/: syntax_lesson.ino
Module material/assembly_module/: board.html  boardstyle.css  electrical.html  mechanical.html  style.css  test.html
Reading Material/: Links.txt
arduino_code/libraries/DIfferentiator/: Differentiator.cpp
arduino_code/libraries/Flags/: Flags.cpp  Flags.h
arduino_code/sketch_aug10a/: sketch_aug10a.ino
arduino_code/sketch_jul30b/: sketch_jul30b.ino
arduino_code/sketch_jun25a/: sketch_jun25a.ino
dev/arduino/: .gitignore  libraries
dev/inter-thread/: CMakeLists.txt  inter-thread.c++  random-words.c++  random-words.h
dev/inter-thread/src/: CMakeLists.txt  main.c++
dev/pico/: CMakeLists.txt
dev/pico/include/: CMakeLists.txt  pwm_helper.h  rcc_pins.h  rcc_stdlib.h
dev/pico/python/: dev.py  requirements.txt  test_comms.py
dev/pico/python/comms/: __init__.py  controller.py  messages.py  packet.py
dev/pico/rcc/: library.properties
dev/pico/rcc/examples/challenges/00-blink/0-sos/: 0-sos.ino
dev/pico/rcc/examples/challenges/00-blink/2-fizz-buzz-sol/: 2-fizz-buzz-sol.ino
dev/pico/rcc/examples/challenges/01-arrays/1-robot-dance/: 1-robot-dance.ino
dev/pico/rcc/src/actuator/: motor.h  servo.h
dev/pico/sensors/: CMakeLists.txt  VL53L0X.cpp  VL53L0X.h  hc-sr04.cpp  hc-sr04.h  mpu6050.cpp  mpu6050.h  mpu_6050_test.cpp  odom.h  odom_impl.h
dev/pico/tests/: CMakeLists.txt  SConstruct  all_sensor_test.cpp  control_test.cpp  dep_install.sh  frequency_test.cpp  hcsr04_test.cpp  lidar_test.cpp  motor_test.cpp  mpu_6050_test.cpp  multi_i2c_test.cpp  notes.txt  odom_test.cpp  servo_pot_test.cpp  vel_control_test.cpp  wireless_interface_test.cpp
dev/pico/tests/include/: comms.h  endian.h  include_test.h  messages.h  rcc_wireless_msg_interface.h  wireless_comms.h
dev/pico/tests/lib/: CMakeLists.txt  Servo.h  comms  pwm_util.h
dev/pico/tests/lib/rcc_comms/: messages.h  packet.h  serialize.h
dev/pico/tests/log/: latest_list
dev/pico/tests/src/: CMakeLists.txt  adc_test.cpp  picow_udp_beacon.c  picow_udp_beacon.cpp  test_main.c  wireless_interface_test.cpp
dev/pico/tests/src/comms/: CMakeLists.txt  packet.c++
dev/pico/tests/src/misc/: adc_test.cpp  adc_test2.cpp
dev/pico/tests/src/rcc_comms/: messages.c++
dev/pico/util/: CMakeLists.txt  pid-control.cpp  pid-control.h
dev/pico/wireless/: CMakeLists.txt  wireless_interface_test.cpp
dev/pico/wireless/include/: rcc_wireless_msg_interface.h
dev/pico/wireless/misc/: notes.txt
docs/: PicoDev.md  SUMMARY.md  UbuntuVM.md  UploadPico.md  notes
lib/: CMakeLists.txt
lib/arduino/rcc/: keywords.txt  (+1 more)
lib/comms/: console.c++  messages.h  serial_types.impl.h  serialize.impl.h
lib/serial-packets/: CMakeLists.txt  messages.c++  messages.h  packet.c++  packet.h
python_code/: PID_example.py  activate_venv.sh  requirements.txt  venv_install.sh  win_env.sh
python_code/dynamics_and_simulation/: controls_utils.py  example_system.py  extra_systems.py  integration_test.py  math_utils.py  pygame_test.py  pygame_utils.py  sanity_utils.py  system_utils.py  test.py
python_scripts/: PID_example.py
templates/arduino-library/: library.properties
tools/: depchk.bash
(+167 files in other folders)
